[gd_scene load_steps=3 format=3 uid="uid://dhenv3d16apop"]

[ext_resource type="Script" uid="uid://cj0io7hgfvkqi" path="res://src/overworld/gamepieces/player/player_physics.gd" id="1_gjv4o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1c2pk"]
radius = 6.0

[node name="PlayerPhysics" type="Node2D"]
script = ExtResource("1_gjv4o")

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(16, 0)
shape = SubResource("CircleShape2D_1c2pk")
debug_color = Color(0.992157, 0, 0.14902, 0.419608)
